// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`allotr-classic-dark > matches its snapshot 1`] = `
{
  "fitted": {
    "text-muted": {
      "deltaL": 0.08,
      "from": "#93a39b",
      "to": "#acbcb4",
    },
  },
  "id": "allotr-classic-dark",
  "roles": {
    "canvas": "#0f1a17",
    "card": "#1b2a25",
    "card-raised": "#1b2a25",
    "chrome": "#1b2a25",
    "danger": "#e3a497",
    "danger-container": "#4b4740",
    "hero-ok": "#d9a441",
    "hero-over": "#d98270",
    "hero-tight": "#d9a441",
    "info": "#7db1f4",
    "info-container": "#334a57",
    "inverse": "#e6eee9",
    "negative": "#d98270",
    "on-danger-container": "#e6eee9",
    "on-inverse": "#0f1a17",
    "on-primary": "#0f1a17",
    "on-primary-container": "#e6eee9",
    "outline": "#5f756b",
    "outline-variant": "#2c3d37",
    "pace": "#7e8884",
    "positive": "#7fc4a0",
    "primary": "#e6eee9",
    "primary-container": "#424554",
    "reserved": "#d9a441",
    "ring": "#d9a441",
    "selection": "#2b3632",
    "series-1": "#7db1f4",
    "series-2": "#bf9ce7",
    "series-3": "#40c4c4",
    "series-4": "#d9a441",
    "series-5": "#e390b8",
    "series-6": "#7fc4a0",
    "series-7": "#d9a441",
    "series-8": "#e3a497",
    "success": "#7fc4a0",
    "success-container": "#334f43",
    "text": "#e6eee9",
    "text-muted": "#acbcb4",
    "warning": "#d9a441",
    "warning-container": "#49472c",
  },
}
`;

exports[`allotr-classic-light > matches its snapshot 1`] = `
{
  "fitted": {
    "hero-ok": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
    "hero-tight": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
    "outline": {
      "deltaL": 0.02,
      "from": "#7c8f85",
      "to": "#76897f",
    },
    "reserved": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
    "series-4": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
    "series-7": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
    "text-muted": {
      "deltaL": 0.035,
      "from": "#55655e",
      "to": "#4b5b54",
    },
    "warning": {
      "deltaL": 0.005,
      "from": "#b7791f",
      "to": "#b5771d",
    },
  },
  "id": "allotr-classic-light",
  "roles": {
    "canvas": "#f3f5f2",
    "card": "#e3eae4",
    "card-raised": "#e3eae4",
    "chrome": "#e3eae4",
    "danger": "#9c4a3c",
    "danger-container": "#d6cdc6",
    "hero-ok": "#b5771d",
    "hero-over": "#9c4a3c",
    "hero-tight": "#b5771d",
    "info": "#3567a5",
    "info-container": "#c4d2d9",
    "inverse": "#17302a",
    "negative": "#9c4a3c",
    "on-danger-container": "#17302a",
    "on-inverse": "#f3f5f2",
    "on-primary": "#f3f5f2",
    "on-primary-container": "#17302a",
    "outline": "#76897f",
    "outline-variant": "#c9d3cc",
    "pace": "#728078",
    "positive": "#2f6b4f",
    "primary": "#17302a",
    "primary-container": "#cfcfd7",
    "reserved": "#b5771d",
    "ring": "#a86f1c",
    "selection": "#d3d8d3",
    "series-1": "#3567a5",
    "series-2": "#755399",
    "series-3": "#007575",
    "series-4": "#b5771d",
    "series-5": "#94486f",
    "series-6": "#2f6b4f",
    "series-7": "#b5771d",
    "series-8": "#9c4a3c",
    "success": "#2f6b4f",
    "success-container": "#c3d3c9",
    "text": "#17302a",
    "text-muted": "#4b5b54",
    "warning": "#b5771d",
    "warning-container": "#dbd6c1",
  },
}
`;

exports[`alucard > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.025,
      "from": "#cb3a2a",
      "to": "#c23122",
    },
    "outline": {
      "deltaL": 0.005,
      "from": "#8f8d85",
      "to": "#8d8b84",
    },
    "text-muted": {
      "deltaL": 0.035,
      "from": "#6c664b",
      "to": "#625c41",
    },
  },
  "id": "alucard",
  "roles": {
    "canvas": "#fffbeb",
    "card": "#f5f1e1",
    "card-raised": "#ebe7d7",
    "chrome": "#f5f1e1",
    "danger": "#cb3a2a",
    "danger-container": "#edd0c0",
    "hero-ok": "#644ac9",
    "hero-over": "#cb3a2a",
    "hero-tight": "#a34d14",
    "info": "#1565bb",
    "info-container": "#cdd8da",
    "inverse": "#1f1f1f",
    "negative": "#c23122",
    "on-danger-container": "#1f1f1f",
    "on-inverse": "#fffbeb",
    "on-primary": "#fffbeb",
    "on-primary-container": "#1f1f1f",
    "outline": "#8d8b84",
    "outline-variant": "#cfcfde",
    "pace": "#787771",
    "positive": "#14710a",
    "primary": "#644ac9",
    "primary-container": "#dbd3dd",
    "reserved": "#a34d14",
    "ring": "#644ac9",
    "selection": "#dddacd",
    "series-1": "#1565bb",
    "series-2": "#644ac9",
    "series-3": "#036a96",
    "series-4": "#a34d14",
    "series-5": "#a3144d",
    "series-6": "#14710a",
    "series-7": "#846e15",
    "series-8": "#cb3a2a",
    "success": "#14710a",
    "success-container": "#cddaba",
    "text": "#1f1f1f",
    "text-muted": "#625c41",
    "warning": "#a34d14",
    "warning-container": "#e6d3bc",
  },
}
`;

exports[`catppuccin-frappe > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.095,
      "from": "#ea999c",
      "to": "#ffbdbf",
    },
    "on-primary-container": {
      "deltaL": 0.025,
      "from": "#c6d0f5",
      "to": "#ced8fd",
    },
    "outline": {
      "deltaL": 0.02,
      "from": "#838ba7",
      "to": "#8991ad",
    },
    "positive": {
      "deltaL": 0.03,
      "from": "#a6d189",
      "to": "#afdb92",
    },
    "primary": {
      "deltaL": 0.015,
      "from": "#ca9ee6",
      "to": "#cfa3eb",
    },
    "text": {
      "deltaL": 0.05,
      "from": "#c6d0f5",
      "to": "#d8e1ff",
    },
    "text-muted": {
      "deltaL": 0.16,
      "from": "#a5adce",
      "to": "#d9e1ff",
    },
  },
  "id": "catppuccin-frappe",
  "roles": {
    "canvas": "#303446",
    "card": "#414559",
    "card-raised": "#51576d",
    "chrome": "#292c3c",
    "danger": "#e78284",
    "danger-container": "#695463",
    "hero-ok": "#ca9ee6",
    "hero-over": "#ea999c",
    "hero-tight": "#ef9f76",
    "info": "#8caaee",
    "info-container": "#535d7d",
    "inverse": "#c6d0f5",
    "negative": "#ffbdbf",
    "on-danger-container": "#c6d0f5",
    "on-inverse": "#303446",
    "on-primary": "#232634",
    "on-primary-container": "#ced8fd",
    "outline": "#8991ad",
    "outline-variant": "#51576d",
    "pace": "#949cbb",
    "positive": "#afdb92",
    "primary": "#cfa3eb",
    "primary-container": "#625a7b",
    "reserved": "#ef9f76",
    "ring": "#babbf1",
    "selection": "#494e63",
    "series-1": "#8caaee",
    "series-2": "#ca9ee6",
    "series-3": "#81c8be",
    "series-4": "#ef9f76",
    "series-5": "#f4b8e4",
    "series-6": "#a6d189",
    "series-7": "#e5c890",
    "series-8": "#babbf1",
    "success": "#a6d189",
    "success-container": "#596765",
    "text": "#d8e1ff",
    "text-muted": "#d9e1ff",
    "warning": "#ef9f76",
    "warning-container": "#6b5b60",
  },
}
`;

exports[`catppuccin-latte > matches its snapshot 1`] = `
{
  "fitted": {
    "hero-tight": {
      "deltaL": 0.055,
      "from": "#fe640b",
      "to": "#e55800",
    },
    "negative": {
      "deltaL": 0.1,
      "from": "#e64553",
      "to": "#c21b36",
    },
    "outline": {
      "deltaL": 0.035,
      "from": "#8c8fa1",
      "to": "#828496",
    },
    "positive": {
      "deltaL": 0.14,
      "from": "#40a02b",
      "to": "#1c7300",
    },
    "primary": {
      "deltaL": 0.005,
      "from": "#8839ef",
      "to": "#8737ed",
    },
    "reserved": {
      "deltaL": 0.055,
      "from": "#fe640b",
      "to": "#e55800",
    },
    "series-4": {
      "deltaL": 0.055,
      "from": "#fe640b",
      "to": "#e55800",
    },
    "series-5": {
      "deltaL": 0.085,
      "from": "#ea76cb",
      "to": "#cd5bb0",
    },
    "series-6": {
      "deltaL": 0.025,
      "from": "#40a02b",
      "to": "#379821",
    },
    "series-7": {
      "deltaL": 0.09,
      "from": "#df8e1d",
      "to": "#bd7500",
    },
    "series-8": {
      "deltaL": 0.035,
      "from": "#7287fd",
      "to": "#687cf1",
    },
    "success": {
      "deltaL": 0.025,
      "from": "#40a02b",
      "to": "#379821",
    },
    "text-muted": {
      "deltaL": 0.095,
      "from": "#6c6f85",
      "to": "#515469",
    },
    "warning": {
      "deltaL": 0.055,
      "from": "#fe640b",
      "to": "#e55800",
    },
  },
  "id": "catppuccin-latte",
  "roles": {
    "canvas": "#eff1f5",
    "card": "#e6e9ef",
    "card-raised": "#dce0e8",
    "chrome": "#e6e9ef",
    "danger": "#d20f39",
    "danger-container": "#e2c2ce",
    "hero-ok": "#8839ef",
    "hero-over": "#e64553",
    "hero-tight": "#e55800",
    "info": "#1e66f5",
    "info-container": "#c2d1f0",
    "inverse": "#4c4f69",
    "negative": "#c21b36",
    "on-danger-container": "#4c4f69",
    "on-inverse": "#eff1f5",
    "on-primary": "#eff1f5",
    "on-primary-container": "#4c4f69",
    "outline": "#828496",
    "outline-variant": "#ccd0da",
    "pace": "#7c7f93",
    "positive": "#1c7300",
    "primary": "#8737ed",
    "primary-container": "#d5c9ef",
    "reserved": "#e55800",
    "ring": "#8839ef",
    "selection": "#d2d4dd",
    "series-1": "#1e66f5",
    "series-2": "#8839ef",
    "series-3": "#179299",
    "series-4": "#e55800",
    "series-5": "#cd5bb0",
    "series-6": "#379821",
    "series-7": "#bd7500",
    "series-8": "#687cf1",
    "success": "#379821",
    "success-container": "#c8dccc",
    "text": "#4c4f69",
    "text-muted": "#515469",
    "warning": "#e55800",
    "warning-container": "#ead1c6",
  },
}
`;

exports[`catppuccin-macchiato > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.05,
      "from": "#ee99a0",
      "to": "#ffa9b0",
    },
    "text": {
      "deltaL": 0.005,
      "from": "#cad3f5",
      "to": "#ccd5f7",
    },
    "text-muted": {
      "deltaL": 0.125,
      "from": "#a5adcb",
      "to": "#cdd5f4",
    },
  },
  "id": "catppuccin-macchiato",
  "roles": {
    "canvas": "#24273a",
    "card": "#363a4f",
    "card-raised": "#494d64",
    "chrome": "#1e2030",
    "danger": "#ed8796",
    "danger-container": "#624c60",
    "hero-ok": "#c6a0f6",
    "hero-over": "#ee99a0",
    "hero-tight": "#f5a97f",
    "info": "#8aadf4",
    "info-container": "#4a5677",
    "inverse": "#cad3f5",
    "negative": "#ffa9b0",
    "on-danger-container": "#cad3f5",
    "on-inverse": "#24273a",
    "on-primary": "#181926",
    "on-primary-container": "#cad3f5",
    "outline": "#8087a2",
    "outline-variant": "#494d64",
    "pace": "#939ab7",
    "positive": "#a6da95",
    "primary": "#c6a0f6",
    "primary-container": "#595277",
    "reserved": "#f5a97f",
    "ring": "#b7bdf8",
    "selection": "#404459",
    "series-1": "#8aadf4",
    "series-2": "#c6a0f6",
    "series-3": "#8bd5ca",
    "series-4": "#f5a97f",
    "series-5": "#f5bde6",
    "series-6": "#a6da95",
    "series-7": "#eed49f",
    "series-8": "#b7bdf8",
    "success": "#a6da95",
    "success-container": "#516060",
    "text": "#ccd5f7",
    "text-muted": "#cdd5f4",
    "warning": "#f5a97f",
    "warning-container": "#64555b",
  },
}
`;

exports[`catppuccin-mocha > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.005,
      "from": "#eba0ac",
      "to": "#eda2ae",
    },
    "text-muted": {
      "deltaL": 0.11,
      "from": "#a6adc8",
      "to": "#c9d0ec",
    },
  },
  "id": "catppuccin-mocha",
  "roles": {
    "canvas": "#1e1e2e",
    "card": "#313244",
    "card-raised": "#45475a",
    "chrome": "#181825",
    "danger": "#f38ba8",
    "danger-container": "#60475c",
    "hero-ok": "#cba6f7",
    "hero-over": "#eba0ac",
    "hero-tight": "#fab387",
    "info": "#89b4fa",
    "info-container": "#465170",
    "inverse": "#cdd6f4",
    "negative": "#eda2ae",
    "on-danger-container": "#cdd6f4",
    "on-inverse": "#1e1e2e",
    "on-primary": "#11111b",
    "on-primary-container": "#cdd6f4",
    "outline": "#7f849c",
    "outline-variant": "#45475a",
    "pace": "#9399b2",
    "positive": "#a6e3a1",
    "primary": "#cba6f7",
    "primary-container": "#564e6f",
    "reserved": "#fab387",
    "ring": "#b4befe",
    "selection": "#3b3d4f",
    "series-1": "#89b4fa",
    "series-2": "#cba6f7",
    "series-3": "#94e2d5",
    "series-4": "#fab387",
    "series-5": "#f5c2e7",
    "series-6": "#a6e3a1",
    "series-7": "#f9e2af",
    "series-8": "#b4befe",
    "success": "#a6e3a1",
    "success-container": "#4d5c5a",
    "text": "#cdd6f4",
    "text-muted": "#c9d0ec",
    "warning": "#fab387",
    "warning-container": "#615154",
  },
}
`;

exports[`dracula > matches its snapshot 1`] = `
{
  "fitted": {
    "danger": {
      "deltaL": 0.01,
      "from": "#ff5555",
      "to": "#ff5d5b",
    },
    "hero-over": {
      "deltaL": 0.01,
      "from": "#ff5555",
      "to": "#ff5d5b",
    },
    "negative": {
      "deltaL": 0.115,
      "from": "#ff5555",
      "to": "#ff9f98",
    },
    "outline": {
      "deltaL": 0.11,
      "from": "#6272a4",
      "to": "#8293c7",
    },
    "primary": {
      "deltaL": 0.05,
      "from": "#bd93f9",
      "to": "#caa7ff",
    },
    "series-8": {
      "deltaL": 0.01,
      "from": "#ff5555",
      "to": "#ff5d5b",
    },
    "text-muted": {
      "deltaL": 0.165,
      "from": "#aeb7b1",
      "to": "#e3ece6",
    },
  },
  "id": "dracula",
  "roles": {
    "canvas": "#282a36",
    "card": "#44475a",
    "card-raised": "#414a54",
    "chrome": "#21232e",
    "danger": "#ff5d5b",
    "danger-container": "#714a59",
    "hero-ok": "#bd93f9",
    "hero-over": "#ff5d5b",
    "hero-tight": "#ffb86c",
    "info": "#a4ccff",
    "info-container": "#5b6782",
    "inverse": "#f8f8f2",
    "negative": "#ff9f98",
    "on-danger-container": "#f8f8f2",
    "on-inverse": "#282a36",
    "on-primary": "#1a1c27",
    "on-primary-container": "#f8f8f2",
    "outline": "#8293c7",
    "outline-variant": "#414a54",
    "pace": "#8e9997",
    "positive": "#50fa7b",
    "primary": "#caa7ff",
    "primary-container": "#615980",
    "reserved": "#ffb86c",
    "ring": "#a4ccff",
    "selection": "#42464e",
    "series-1": "#a4ccff",
    "series-2": "#bd93f9",
    "series-3": "#8be9fd",
    "series-4": "#ffb86c",
    "series-5": "#ff79c6",
    "series-6": "#50fa7b",
    "series-7": "#f1fa8c",
    "series-8": "#ff5d5b",
    "success": "#50fa7b",
    "success-container": "#477262",
    "text": "#f8f8f2",
    "text-muted": "#e3ece6",
    "warning": "#ffb86c",
    "warning-container": "#71625e",
  },
}
`;

exports[`gruvbox-dark > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.14,
      "from": "#fb4934",
      "to": "#ffa191",
    },
    "positive": {
      "deltaL": 0.015,
      "from": "#b8bb26",
      "to": "#bdc02e",
    },
    "primary": {
      "deltaL": 0.02,
      "from": "#d3869b",
      "to": "#da8ca1",
    },
    "text-muted": {
      "deltaL": 0.15,
      "from": "#a89984",
      "to": "#d8c8b2",
    },
  },
  "id": "gruvbox-dark",
  "roles": {
    "canvas": "#282828",
    "card": "#3c3836",
    "card-raised": "#504945",
    "chrome": "#1d2021",
    "danger": "#fb4934",
    "danger-container": "#6a3c36",
    "hero-ok": "#d3869b",
    "hero-over": "#fb4934",
    "hero-tight": "#fe8019",
    "info": "#83a598",
    "info-container": "#4d524e",
    "inverse": "#ebdbb2",
    "negative": "#ffa191",
    "on-danger-container": "#ebdbb2",
    "on-inverse": "#282828",
    "on-primary": "#1a1a1a",
    "on-primary-container": "#ebdbb2",
    "outline": "#928374",
    "outline-variant": "#504945",
    "pace": "#8e8672",
    "positive": "#bdc02e",
    "primary": "#da8ca1",
    "primary-container": "#604b4e",
    "reserved": "#fe8019",
    "ring": "#83a598",
    "selection": "#42403b",
    "series-1": "#83a598",
    "series-2": "#d3869b",
    "series-3": "#8ec07c",
    "series-4": "#fe8019",
    "series-5": "#d3869b",
    "series-6": "#b8bb26",
    "series-7": "#fabd2f",
    "series-8": "#fb4934",
    "success": "#b8bb26",
    "success-container": "#5a5732",
    "text": "#ebdbb2",
    "text-muted": "#d8c8b2",
    "warning": "#fe8019",
    "warning-container": "#6b492f",
  },
}
`;

exports[`gruvbox-light > matches its snapshot 1`] = `
{
  "fitted": {
    "outline": {
      "deltaL": 0.005,
      "from": "#928374",
      "to": "#908273",
    },
    "positive": {
      "deltaL": 0.06,
      "from": "#79740e",
      "to": "#676200",
    },
    "text-muted": {
      "deltaL": 0.115,
      "from": "#7c6f64",
      "to": "#5b4f44",
    },
  },
  "id": "gruvbox-light",
  "roles": {
    "canvas": "#fbf1c7",
    "card": "#f1e7bd",
    "card-raised": "#e7ddb4",
    "chrome": "#f1e7bd",
    "danger": "#9d0006",
    "danger-container": "#e2bd9c",
    "hero-ok": "#8f3f71",
    "hero-over": "#9d0006",
    "hero-tight": "#af3a03",
    "info": "#076678",
    "info-container": "#c7d0b1",
    "inverse": "#3c3836",
    "negative": "#9d0006",
    "on-danger-container": "#3c3836",
    "on-inverse": "#fbf1c7",
    "on-primary": "#fbf1c7",
    "on-primary-container": "#3c3836",
    "outline": "#908273",
    "outline-variant": "#ebdbb2",
    "pace": "#8f8172",
    "positive": "#676200",
    "primary": "#8f3f71",
    "primary-container": "#dfc9af",
    "reserved": "#af3a03",
    "ring": "#8f3f71",
    "selection": "#e0d5b2",
    "series-1": "#076678",
    "series-2": "#8f3f71",
    "series-3": "#427b58",
    "series-4": "#af3a03",
    "series-5": "#8f3f71",
    "series-6": "#79740e",
    "series-7": "#b57614",
    "series-8": "#9d0006",
    "success": "#79740e",
    "success-container": "#dbd29e",
    "text": "#3c3836",
    "text-muted": "#5b4f44",
    "warning": "#af3a03",
    "warning-container": "#e5c89c",
  },
}
`;

exports[`harbour > matches its snapshot 1`] = `
{
  "fitted": {
    "text-muted": {
      "deltaL": 0.045,
      "from": "#9aa8ba",
      "to": "#a8b6c8",
    },
  },
  "id": "harbour",
  "roles": {
    "canvas": "#111823",
    "card": "#1a2330",
    "card-raised": "#1c2533",
    "chrome": "#1a2330",
    "danger": "#f3a799",
    "danger-container": "#4e4349",
    "hero-ok": "#e8b04b",
    "hero-over": "#f0907e",
    "hero-tight": "#e8b04b",
    "info": "#8bbeff",
    "info-container": "#354862",
    "inverse": "#e4eaf2",
    "negative": "#f0907e",
    "on-danger-container": "#e4eaf2",
    "on-inverse": "#111823",
    "on-primary": "#111823",
    "on-primary-container": "#e4eaf2",
    "outline": "#6a7b92",
    "outline-variant": "#2d3a4d",
    "pace": "#7e8590",
    "positive": "#7cc7b0",
    "primary": "#e4eaf2",
    "primary-container": "#454360",
    "reserved": "#e8b04b",
    "ring": "#e8b04b",
    "selection": "#2c333e",
    "series-1": "#8bbeff",
    "series-2": "#cda7f9",
    "series-3": "#40d3d3",
    "series-4": "#e8b04b",
    "series-5": "#f59ac6",
    "series-6": "#7cc7b0",
    "series-7": "#e8b04b",
    "series-8": "#f3a799",
    "success": "#7cc7b0",
    "success-container": "#324a4f",
    "text": "#e4eaf2",
    "text-muted": "#a8b6c8",
    "warning": "#e8b04b",
    "warning-container": "#4b4536",
  },
}
`;

exports[`high-contrast-dark > matches its snapshot 1`] = `
{
  "fitted": {},
  "id": "high-contrast-dark",
  "roles": {
    "canvas": "#000000",
    "card": "#141414",
    "card-raised": "#1c1c1c",
    "chrome": "#141414",
    "danger": "#ffb7ab",
    "danger-container": "#4c3b38",
    "hero-ok": "#ffc94d",
    "hero-over": "#ff9b8a",
    "hero-tight": "#ffc94d",
    "info": "#a9cfff",
    "info-container": "#38414c",
    "inverse": "#ffffff",
    "negative": "#ff9b8a",
    "on-danger-container": "#ffffff",
    "on-inverse": "#000000",
    "on-primary": "#000000",
    "on-primary-container": "#ffffff",
    "outline": "#a6a6a6",
    "outline-variant": "#5c5c5c",
    "pace": "#747474",
    "positive": "#7ee2a8",
    "primary": "#ffffff",
    "primary-container": "#443c4c",
    "reserved": "#ffc94d",
    "ring": "#ffc94d",
    "selection": "#1d1d1d",
    "series-1": "#a9cfff",
    "series-2": "#dabcff",
    "series-3": "#51e5e4",
    "series-4": "#ffc94d",
    "series-5": "#ffb0d5",
    "series-6": "#7ee2a8",
    "series-7": "#ffc94d",
    "series-8": "#ffb7ab",
    "success": "#7ee2a8",
    "success-container": "#2d4538",
    "text": "#ffffff",
    "text-muted": "#d0d0d0",
    "warning": "#ffc94d",
    "warning-container": "#4c3f22",
  },
}
`;

exports[`high-contrast-light > matches its snapshot 1`] = `
{
  "fitted": {},
  "id": "high-contrast-light",
  "roles": {
    "canvas": "#ffffff",
    "card": "#f2f2f2",
    "card-raised": "#ececec",
    "chrome": "#f2f2f2",
    "danger": "#8f1d10",
    "danger-container": "#e0ccc9",
    "hero-ok": "#7a4a00",
    "hero-over": "#8f1d10",
    "hero-tight": "#7a4a00",
    "info": "#244f84",
    "info-container": "#cdd5de",
    "inverse": "#000000",
    "negative": "#8f1d10",
    "on-danger-container": "#000000",
    "on-inverse": "#ffffff",
    "on-primary": "#ffffff",
    "on-primary-container": "#000000",
    "outline": "#4d4d4d",
    "outline-variant": "#8a8a8a",
    "pace": "#525252",
    "positive": "#0b5a2f",
    "primary": "#000000",
    "primary-container": "#d7d2dc",
    "reserved": "#7a4a00",
    "ring": "#7a4a00",
    "selection": "#d4d4d4",
    "series-1": "#244f84",
    "series-2": "#5b3e7a",
    "series-3": "#005b5b",
    "series-4": "#7a4a00",
    "series-5": "#753556",
    "series-6": "#0b5a2f",
    "series-7": "#7a4a00",
    "series-8": "#8f1d10",
    "success": "#0b5a2f",
    "success-container": "#c8d7cf",
    "text": "#000000",
    "text-muted": "#333333",
    "warning": "#7a4a00",
    "warning-container": "#dcd4c6",
  },
}
`;

exports[`nord > matches its snapshot 1`] = `
{
  "fitted": {
    "danger": {
      "deltaL": 0.05,
      "from": "#bf616a",
      "to": "#d07079",
    },
    "hero-over": {
      "deltaL": 0.05,
      "from": "#bf616a",
      "to": "#d07079",
    },
    "negative": {
      "deltaL": 0.2,
      "from": "#bf616a",
      "to": "#ffa2a8",
    },
    "outline": {
      "deltaL": 0.03,
      "from": "#7f848e",
      "to": "#888d97",
    },
    "positive": {
      "deltaL": 0.02,
      "from": "#a3be8c",
      "to": "#a9c492",
    },
    "primary": {
      "deltaL": 0.065,
      "from": "#b48ead",
      "to": "#c9a2c2",
    },
    "series-8": {
      "deltaL": 0.05,
      "from": "#bf616a",
      "to": "#d07079",
    },
  },
  "id": "nord",
  "roles": {
    "canvas": "#2e3440",
    "card": "#3b4252",
    "card-raised": "#434c5e",
    "chrome": "#272c38",
    "danger": "#d07079",
    "danger-container": "#5b4958",
    "hero-ok": "#b48ead",
    "hero-over": "#d07079",
    "hero-tight": "#d08770",
    "info": "#81a1c1",
    "info-container": "#4c596d",
    "inverse": "#eceff4",
    "negative": "#ffa2a8",
    "on-danger-container": "#eceff4",
    "on-inverse": "#2e3440",
    "on-primary": "#1f2530",
    "on-primary-container": "#eceff4",
    "outline": "#888d97",
    "outline-variant": "#434c5e",
    "pace": "#9297a0",
    "positive": "#a9c492",
    "primary": "#c9a2c2",
    "primary-container": "#585468",
    "reserved": "#d08770",
    "ring": "#81a1c1",
    "selection": "#474d58",
    "series-1": "#81a1c1",
    "series-2": "#b48ead",
    "series-3": "#88c0d0",
    "series-4": "#d08770",
    "series-5": "#c28aa4",
    "series-6": "#a3be8c",
    "series-7": "#ebcb8b",
    "series-8": "#d07079",
    "success": "#a3be8c",
    "success-container": "#546060",
    "text": "#eceff4",
    "text-muted": "#d8dee9",
    "warning": "#d08770",
    "warning-container": "#5f5359",
  },
}
`;

exports[`paper > matches its snapshot 1`] = `
{
  "fitted": {},
  "id": "paper",
  "roles": {
    "canvas": "#f7f1e3",
    "card": "#efe7d4",
    "card-raised": "#ebe2cd",
    "chrome": "#efe7d4",
    "danger": "#9a3324",
    "danger-container": "#e0c7b4",
    "hero-ok": "#a0561c",
    "hero-over": "#9a3324",
    "hero-tight": "#a0561c",
    "info": "#2b5c97",
    "info-container": "#cccec9",
    "inverse": "#2b2118",
    "negative": "#9a3324",
    "on-danger-container": "#2b2118",
    "on-inverse": "#f7f1e3",
    "on-primary": "#f7f1e3",
    "on-primary-container": "#2b2118",
    "outline": "#857560",
    "outline-variant": "#d6c9ad",
    "pace": "#7e7569",
    "positive": "#3d6630",
    "primary": "#3a2c1f",
    "primary-container": "#d7cbc7",
    "reserved": "#a0561c",
    "ring": "#8a4712",
    "selection": "#d9d2c4",
    "series-1": "#2b5c97",
    "series-2": "#69498c",
    "series-3": "#006969",
    "series-4": "#a0561c",
    "series-5": "#873e63",
    "series-6": "#3d6630",
    "series-7": "#a0561c",
    "series-8": "#9a3324",
    "success": "#3d6630",
    "success-container": "#cfd0b6",
    "text": "#2b2118",
    "text-muted": "#5e5040",
    "warning": "#a0561c",
    "warning-container": "#e1cdb3",
  },
}
`;

exports[`rose-pine > matches its snapshot 1`] = `
{
  "fitted": {
    "ring": {
      "deltaL": 0.01,
      "from": "#31748f",
      "to": "#347792",
    },
    "text-muted": {
      "deltaL": 0.125,
      "from": "#908caa",
      "to": "#b7b3d2",
    },
  },
  "id": "rose-pine",
  "roles": {
    "canvas": "#191724",
    "card": "#1f1d2e",
    "card-raised": "#26233a",
    "chrome": "#12101d",
    "danger": "#eb6f92",
    "danger-container": "#503146",
    "hero-ok": "#c4a7e7",
    "hero-over": "#eb6f92",
    "hero-tight": "#f6c177",
    "info": "#31748f",
    "info-container": "#233245",
    "inverse": "#e0def4",
    "negative": "#eb6f92",
    "on-danger-container": "#e0def4",
    "on-inverse": "#191724",
    "on-primary": "#0c0a16",
    "on-primary-container": "#e0def4",
    "outline": "#6e6a86",
    "outline-variant": "#26233a",
    "pace": "#807e91",
    "positive": "#9acd9b",
    "primary": "#c4a7e7",
    "primary-container": "#473e5a",
    "reserved": "#f6c177",
    "ring": "#347792",
    "selection": "#33313f",
    "series-1": "#31748f",
    "series-2": "#c4a7e7",
    "series-3": "#9ccfd8",
    "series-4": "#f6c177",
    "series-5": "#ebbcba",
    "series-6": "#9acd9b",
    "series-7": "#f6c177",
    "series-8": "#eb6f92",
    "success": "#9acd9b",
    "success-container": "#3d4748",
    "text": "#e0def4",
    "text-muted": "#b7b3d2",
    "warning": "#f6c177",
    "warning-container": "#534440",
  },
}
`;

exports[`rose-pine-dawn > matches its snapshot 1`] = `
{
  "fitted": {
    "hero-tight": {
      "deltaL": 0.125,
      "from": "#ea9d34",
      "to": "#bd7800",
    },
    "negative": {
      "deltaL": 0.085,
      "from": "#b4637a",
      "to": "#984a62",
    },
    "outline": {
      "deltaL": 0.05,
      "from": "#9893a5",
      "to": "#898496",
    },
    "pace": {
      "deltaL": 0.025,
      "from": "#a08791",
      "to": "#988089",
    },
    "positive": {
      "deltaL": 0.13,
      "from": "#639664",
      "to": "#3d6f3f",
    },
    "primary": {
      "deltaL": 0.085,
      "from": "#907aa9",
      "to": "#77618f",
    },
    "reserved": {
      "deltaL": 0.125,
      "from": "#ea9d34",
      "to": "#bd7800",
    },
    "ring": {
      "deltaL": 0.01,
      "from": "#907aa9",
      "to": "#8d77a6",
    },
    "series-3": {
      "deltaL": 0.015,
      "from": "#56949f",
      "to": "#518f9a",
    },
    "series-4": {
      "deltaL": 0.125,
      "from": "#ea9d34",
      "to": "#bd7800",
    },
    "series-5": {
      "deltaL": 0.06,
      "from": "#d7827e",
      "to": "#c3706c",
    },
    "series-6": {
      "deltaL": 0.01,
      "from": "#639664",
      "to": "#609361",
    },
    "series-7": {
      "deltaL": 0.125,
      "from": "#ea9d34",
      "to": "#bd7800",
    },
    "success": {
      "deltaL": 0.01,
      "from": "#639664",
      "to": "#609361",
    },
    "text-muted": {
      "deltaL": 0.105,
      "from": "#797593",
      "to": "#5b5774",
    },
    "warning": {
      "deltaL": 0.125,
      "from": "#ea9d34",
      "to": "#bd7800",
    },
  },
  "id": "rose-pine-dawn",
  "roles": {
    "canvas": "#faf4ed",
    "card": "#f0eae3",
    "card-raised": "#e6e0d9",
    "chrome": "#f0eae3",
    "danger": "#b4637a",
    "danger-container": "#e5d2d0",
    "hero-ok": "#907aa9",
    "hero-over": "#b4637a",
    "hero-tight": "#bd7800",
    "info": "#286983",
    "info-container": "#ccd3d2",
    "inverse": "#464261",
    "negative": "#984a62",
    "on-danger-container": "#464261",
    "on-inverse": "#faf4ed",
    "on-primary": "#faf4ed",
    "on-primary-container": "#464261",
    "outline": "#898496",
    "outline-variant": "#f2e9e1",
    "pace": "#988089",
    "positive": "#3d6f3f",
    "primary": "#77618f",
    "primary-container": "#dfd6d9",
    "reserved": "#bd7800",
    "ring": "#8d77a6",
    "selection": "#e3d9d6",
    "series-1": "#286983",
    "series-2": "#907aa9",
    "series-3": "#518f9a",
    "series-4": "#bd7800",
    "series-5": "#c3706c",
    "series-6": "#609361",
    "series-7": "#bd7800",
    "series-8": "#b4637a",
    "success": "#609361",
    "success-container": "#d7dbcc",
    "text": "#464261",
    "text-muted": "#5b5774",
    "warning": "#bd7800",
    "warning-container": "#efdcc3",
  },
}
`;

exports[`rose-pine-moon > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.035,
      "from": "#eb6f92",
      "to": "#f77a9d",
    },
    "outline": {
      "deltaL": 0.02,
      "from": "#6e6a86",
      "to": "#74708c",
    },
    "text-muted": {
      "deltaL": 0.16,
      "from": "#908caa",
      "to": "#c2bedd",
    },
  },
  "id": "rose-pine-moon",
  "roles": {
    "canvas": "#232136",
    "card": "#2a273f",
    "card-raised": "#393552",
    "chrome": "#1c1a2e",
    "danger": "#eb6f92",
    "danger-container": "#583853",
    "hero-ok": "#c4a7e7",
    "hero-over": "#eb6f92",
    "hero-tight": "#f6c177",
    "info": "#3e8fb0",
    "info-container": "#2f405a",
    "inverse": "#e0def4",
    "negative": "#f77a9d",
    "on-danger-container": "#e0def4",
    "on-inverse": "#232136",
    "on-primary": "#151327",
    "on-primary-container": "#e0def4",
    "outline": "#74708c",
    "outline-variant": "#393552",
    "pace": "#86849b",
    "positive": "#8ec58f",
    "primary": "#c4a7e7",
    "primary-container": "#4f4667",
    "reserved": "#f6c177",
    "ring": "#3e8fb0",
    "selection": "#3c3a4f",
    "series-1": "#3e8fb0",
    "series-2": "#c4a7e7",
    "series-3": "#9ccfd8",
    "series-4": "#f6c177",
    "series-5": "#ea9a97",
    "series-6": "#8ec58f",
    "series-7": "#f6c177",
    "series-8": "#eb6f92",
    "success": "#8ec58f",
    "success-container": "#424d52",
    "text": "#e0def4",
    "text-muted": "#c2bedd",
    "warning": "#f6c177",
    "warning-container": "#5b4c4c",
  },
}
`;

exports[`solarized-dark > matches its snapshot 1`] = `
{
  "fitted": {
    "danger": {
      "deltaL": 0.02,
      "from": "#dc322f",
      "to": "#e33a35",
    },
    "hero-ok": {
      "deltaL": 0.005,
      "from": "#6c71c4",
      "to": "#6d73c6",
    },
    "hero-over": {
      "deltaL": 0.02,
      "from": "#dc322f",
      "to": "#e33a35",
    },
    "hero-tight": {
      "deltaL": 0.015,
      "from": "#cb4b16",
      "to": "#d0501d",
    },
    "negative": {
      "deltaL": 0.15,
      "from": "#dc322f",
      "to": "#ff7c70",
    },
    "on-danger-container": {
      "deltaL": 0.005,
      "from": "#93a1a1",
      "to": "#95a3a3",
    },
    "on-primary-container": {
      "deltaL": 0.045,
      "from": "#93a1a1",
      "to": "#a1afaf",
    },
    "outline": {
      "deltaL": 0.11,
      "from": "#435f64",
      "to": "#627f84",
    },
    "pace": {
      "deltaL": 0.01,
      "from": "#657b83",
      "to": "#687e86",
    },
    "positive": {
      "deltaL": 0.06,
      "from": "#859900",
      "to": "#97ac29",
    },
    "primary": {
      "deltaL": 0.105,
      "from": "#6c71c4",
      "to": "#8a91e7",
    },
    "reserved": {
      "deltaL": 0.015,
      "from": "#cb4b16",
      "to": "#d0501d",
    },
    "series-2": {
      "deltaL": 0.005,
      "from": "#6c71c4",
      "to": "#6d73c6",
    },
    "series-4": {
      "deltaL": 0.015,
      "from": "#cb4b16",
      "to": "#d0501d",
    },
    "series-5": {
      "deltaL": 0.015,
      "from": "#d33682",
      "to": "#d83c86",
    },
    "series-8": {
      "deltaL": 0.02,
      "from": "#dc322f",
      "to": "#e33a35",
    },
    "text": {
      "deltaL": 0.07,
      "from": "#93a1a1",
      "to": "#a9b7b7",
    },
    "text-muted": {
      "deltaL": 0.11,
      "from": "#839496",
      "to": "#a5b6b8",
    },
    "warning": {
      "deltaL": 0.015,
      "from": "#cb4b16",
      "to": "#d0501d",
    },
  },
  "id": "solarized-dark",
  "roles": {
    "canvas": "#002b36",
    "card": "#073642",
    "card-raised": "#1b3e46",
    "chrome": "#00232d",
    "danger": "#e33a35",
    "danger-container": "#3a353d",
    "hero-ok": "#6d73c6",
    "hero-over": "#e33a35",
    "hero-tight": "#d0501d",
    "info": "#268bd2",
    "info-container": "#0e4a65",
    "inverse": "#93a1a1",
    "negative": "#ff7c70",
    "on-danger-container": "#95a3a3",
    "on-inverse": "#002b36",
    "on-primary": "#001b23",
    "on-primary-container": "#a1afaf",
    "outline": "#627f84",
    "outline-variant": "#1b3e46",
    "pace": "#687e86",
    "positive": "#97ac29",
    "primary": "#8a91e7",
    "primary-container": "#1f4461",
    "reserved": "#d0501d",
    "ring": "#268bd2",
    "selection": "#193f49",
    "series-1": "#268bd2",
    "series-2": "#6d73c6",
    "series-3": "#2aa198",
    "series-4": "#d0501d",
    "series-5": "#d83c86",
    "series-6": "#859900",
    "series-7": "#b58900",
    "series-8": "#e33a35",
    "success": "#859900",
    "success-container": "#254e32",
    "text": "#a9b7b7",
    "text-muted": "#a5b6b8",
    "warning": "#d0501d",
    "warning-container": "#363b37",
  },
}
`;

exports[`solarized-light > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.055,
      "from": "#dc322f",
      "to": "#c8161c",
    },
    "on-danger-container": {
      "deltaL": 0.055,
      "from": "#586e75",
      "to": "#495e65",
    },
    "on-primary-container": {
      "deltaL": 0.045,
      "from": "#586e75",
      "to": "#4c6168",
    },
    "outline": {
      "deltaL": 0.145,
      "from": "#a8b8aa",
      "to": "#7c8b7e",
    },
    "pace": {
      "deltaL": 0.03,
      "from": "#839496",
      "to": "#7a8b8d",
    },
    "positive": {
      "deltaL": 0.145,
      "from": "#859900",
      "to": "#5d6b00",
    },
    "primary": {
      "deltaL": 0.05,
      "from": "#6c71c4",
      "to": "#5e62b4",
    },
    "series-3": {
      "deltaL": 0.03,
      "from": "#2aa198",
      "to": "#1a988f",
    },
    "series-6": {
      "deltaL": 0.03,
      "from": "#859900",
      "to": "#7c8f00",
    },
    "series-7": {
      "deltaL": 0.03,
      "from": "#b58900",
      "to": "#aa8000",
    },
    "success": {
      "deltaL": 0.03,
      "from": "#859900",
      "to": "#7c8f00",
    },
    "text": {
      "deltaL": 0.055,
      "from": "#586e75",
      "to": "#495e65",
    },
    "text-muted": {
      "deltaL": 0.1,
      "from": "#657b83",
      "to": "#495e66",
    },
  },
  "id": "solarized-light",
  "roles": {
    "canvas": "#fdf6e3",
    "card": "#f3ecd9",
    "card-raised": "#e9e2cf",
    "chrome": "#f3ecd9",
    "danger": "#dc322f",
    "danger-container": "#efcbba",
    "hero-ok": "#6c71c4",
    "hero-over": "#dc322f",
    "hero-tight": "#cb4b16",
    "info": "#268bd2",
    "info-container": "#cedbd8",
    "inverse": "#586e75",
    "negative": "#c8161c",
    "on-danger-container": "#495e65",
    "on-inverse": "#fdf6e3",
    "on-primary": "#fdf6e3",
    "on-primary-container": "#4c6168",
    "outline": "#7c8b7e",
    "outline-variant": "#eee8d5",
    "pace": "#7a8b8d",
    "positive": "#5d6b00",
    "primary": "#5e62b4",
    "primary-container": "#dbd6d5",
    "reserved": "#cb4b16",
    "ring": "#6c71c4",
    "selection": "#dfded0",
    "series-1": "#268bd2",
    "series-2": "#6c71c4",
    "series-3": "#1a988f",
    "series-4": "#cb4b16",
    "series-5": "#d33682",
    "series-6": "#7c8f00",
    "series-7": "#aa8000",
    "series-8": "#dc322f",
    "success": "#7c8f00",
    "success-container": "#dfddb2",
    "text": "#495e65",
    "text-muted": "#495e66",
    "warning": "#cb4b16",
    "warning-container": "#eccfb6",
  },
}
`;

exports[`tokyo-night-day > matches its snapshot 1`] = `
{
  "fitted": {
    "danger": {
      "deltaL": 0.035,
      "from": "#f52a65",
      "to": "#e8135b",
    },
    "hero-ok": {
      "deltaL": 0.005,
      "from": "#9854f1",
      "to": "#9752ef",
    },
    "hero-over": {
      "deltaL": 0.035,
      "from": "#f52a65",
      "to": "#e8135b",
    },
    "info": {
      "deltaL": 0.025,
      "from": "#2e7de9",
      "to": "#2575e0",
    },
    "negative": {
      "deltaL": 0.16,
      "from": "#f52a65",
      "to": "#ab003f",
    },
    "on-danger-container": {
      "deltaL": 0.08,
      "from": "#3760bf",
      "to": "#2248a5",
    },
    "on-primary-container": {
      "deltaL": 0.075,
      "from": "#3760bf",
      "to": "#2349a6",
    },
    "outline": {
      "deltaL": 0.075,
      "from": "#848cb5",
      "to": "#6e769d",
    },
    "positive": {
      "deltaL": 0.085,
      "from": "#587539",
      "to": "#415c20",
    },
    "primary": {
      "deltaL": 0.1,
      "from": "#9854f1",
      "to": "#7b30ce",
    },
    "ring": {
      "deltaL": 0.035,
      "from": "#9854f1",
      "to": "#8e48e5",
    },
    "series-1": {
      "deltaL": 0.025,
      "from": "#2e7de9",
      "to": "#2575e0",
    },
    "series-2": {
      "deltaL": 0.005,
      "from": "#9854f1",
      "to": "#9752ef",
    },
    "series-8": {
      "deltaL": 0.035,
      "from": "#f52a65",
      "to": "#e8135b",
    },
    "text": {
      "deltaL": 0.08,
      "from": "#3760bf",
      "to": "#2248a5",
    },
    "text-muted": {
      "deltaL": 0.14,
      "from": "#6172b0",
      "to": "#3b4a84",
    },
  },
  "id": "tokyo-night-day",
  "roles": {
    "canvas": "#e1e2e7",
    "card": "#d0d5e3",
    "card-raised": "#c1c9df",
    "chrome": "#d0d5e3",
    "danger": "#e8135b",
    "danger-container": "#d7b6cc",
    "hero-ok": "#9752ef",
    "hero-over": "#e8135b",
    "hero-tight": "#b15c00",
    "info": "#2575e0",
    "info-container": "#b3c5e4",
    "inverse": "#3760bf",
    "negative": "#ab003f",
    "on-danger-container": "#2248a5",
    "on-inverse": "#e1e2e7",
    "on-primary": "#e1e2e7",
    "on-primary-container": "#2349a6",
    "outline": "#6e769d",
    "outline-variant": "#c4c8da",
    "pace": "#68709a",
    "positive": "#415c20",
    "primary": "#7b30ce",
    "primary-container": "#c6bee6",
    "reserved": "#b15c00",
    "ring": "#8e48e5",
    "selection": "#c3c5d4",
    "series-1": "#2575e0",
    "series-2": "#9752ef",
    "series-3": "#007197",
    "series-4": "#b15c00",
    "series-5": "#b04f81",
    "series-6": "#587539",
    "series-7": "#8c6c3e",
    "series-8": "#e8135b",
    "success": "#587539",
    "success-container": "#bac4c4",
    "text": "#2248a5",
    "text-muted": "#3b4a84",
    "warning": "#b15c00",
    "warning-container": "#cabfba",
  },
}
`;

exports[`tokyo-night-moon > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.045,
      "from": "#ff757f",
      "to": "#ff9095",
    },
    "outline": {
      "deltaL": 0.045,
      "from": "#636da6",
      "to": "#707ab4",
    },
    "pace": {
      "deltaL": 0.005,
      "from": "#737aa2",
      "to": "#747ba4",
    },
    "text-muted": {
      "deltaL": 0.225,
      "from": "#828bb8",
      "to": "#c8d2ff",
    },
  },
  "id": "tokyo-night-moon",
  "roles": {
    "canvas": "#222436",
    "card": "#2f334d",
    "card-raised": "#3b4261",
    "chrome": "#1e2030",
    "danger": "#ff757f",
    "danger-container": "#614359",
    "hero-ok": "#c099ff",
    "hero-over": "#ff757f",
    "hero-tight": "#ff966c",
    "info": "#82aaff",
    "info-container": "#435078",
    "inverse": "#c8d3f5",
    "negative": "#ff9095",
    "on-danger-container": "#c8d3f5",
    "on-inverse": "#222436",
    "on-primary": "#191b29",
    "on-primary-container": "#c8d3f5",
    "outline": "#707ab4",
    "outline-variant": "#3b4261",
    "pace": "#747ba4",
    "positive": "#c3e88d",
    "primary": "#c099ff",
    "primary-container": "#524b78",
    "reserved": "#ff966c",
    "ring": "#82aaff",
    "selection": "#363a51",
    "series-1": "#82aaff",
    "series-2": "#c099ff",
    "series-3": "#86e1fc",
    "series-4": "#ff966c",
    "series-5": "#fb99c8",
    "series-6": "#c3e88d",
    "series-7": "#ffc777",
    "series-8": "#ff757f",
    "success": "#c3e88d",
    "success-container": "#535e5c",
    "text": "#c8d3f5",
    "text-muted": "#c8d2ff",
    "warning": "#ff966c",
    "warning-container": "#614b54",
  },
}
`;

exports[`tokyo-night-night > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.05,
      "from": "#f7768e",
      "to": "#ff8ea0",
    },
    "outline": {
      "deltaL": 0.08,
      "from": "#565f89",
      "to": "#6c76a2",
    },
    "text-muted": {
      "deltaL": 0.05,
      "from": "#a9b1d6",
      "to": "#b9c1e6",
    },
  },
  "id": "tokyo-night-night",
  "roles": {
    "canvas": "#1a1b26",
    "card": "#292e42",
    "card-raised": "#3b4261",
    "chrome": "#16161e",
    "danger": "#f7768e",
    "danger-container": "#5a3f54",
    "hero-ok": "#bb9af7",
    "hero-over": "#f7768e",
    "hero-tight": "#ff9e64",
    "info": "#7aa2f7",
    "info-container": "#3c4a6d",
    "inverse": "#c0caf5",
    "negative": "#ff8ea0",
    "on-danger-container": "#c0caf5",
    "on-inverse": "#1a1b26",
    "on-primary": "#0c0e14",
    "on-primary-container": "#c0caf5",
    "outline": "#6c76a2",
    "outline-variant": "#3b4261",
    "pace": "#737aa2",
    "positive": "#9ece6a",
    "primary": "#bb9af7",
    "primary-container": "#4c486d",
    "reserved": "#ff9e64",
    "ring": "#7aa2f7",
    "selection": "#303345",
    "series-1": "#7aa2f7",
    "series-2": "#bb9af7",
    "series-3": "#7dcfff",
    "series-4": "#ff9e64",
    "series-5": "#ed89ba",
    "series-6": "#9ece6a",
    "series-7": "#e0af68",
    "series-8": "#f7768e",
    "success": "#9ece6a",
    "success-container": "#45544c",
    "text": "#c0caf5",
    "text-muted": "#b9c1e6",
    "warning": "#ff9e64",
    "warning-container": "#5c494a",
  },
}
`;

exports[`tokyo-night-storm > matches its snapshot 1`] = `
{
  "fitted": {
    "negative": {
      "deltaL": 0.05,
      "from": "#f7768e",
      "to": "#ff8ea0",
    },
    "outline": {
      "deltaL": 0.08,
      "from": "#565f89",
      "to": "#6c76a2",
    },
    "text-muted": {
      "deltaL": 0.05,
      "from": "#a9b1d6",
      "to": "#b9c1e6",
    },
  },
  "id": "tokyo-night-storm",
  "roles": {
    "canvas": "#24283b",
    "card": "#292e42",
    "card-raised": "#3b4261",
    "chrome": "#1f2335",
    "danger": "#f7768e",
    "danger-container": "#5a3f54",
    "hero-ok": "#bb9af7",
    "hero-over": "#f7768e",
    "hero-tight": "#ff9e64",
    "info": "#7aa2f7",
    "info-container": "#3c4a6d",
    "inverse": "#c0caf5",
    "negative": "#ff8ea0",
    "on-danger-container": "#c0caf5",
    "on-inverse": "#24283b",
    "on-primary": "#1b1e2d",
    "on-primary-container": "#c0caf5",
    "outline": "#6c76a2",
    "outline-variant": "#3b4261",
    "pace": "#737aa2",
    "positive": "#9ece6a",
    "primary": "#bb9af7",
    "primary-container": "#4c486d",
    "reserved": "#ff9e64",
    "ring": "#7aa2f7",
    "selection": "#383d55",
    "series-1": "#7aa2f7",
    "series-2": "#bb9af7",
    "series-3": "#7dcfff",
    "series-4": "#ff9e64",
    "series-5": "#ed89ba",
    "series-6": "#9ece6a",
    "series-7": "#e0af68",
    "series-8": "#f7768e",
    "success": "#9ece6a",
    "success-container": "#45544c",
    "text": "#c0caf5",
    "text-muted": "#b9c1e6",
    "warning": "#ff9e64",
    "warning-container": "#5c494a",
  },
}
`;
